Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135489

[REG 6.8.2->6.8.3] Handling of custom scheme URL is broken

XMLWordPrintable

    • Android
    • 393c294e1 (dev), 4019fca88 (6.9), d0b32607d (tqtc/lts-6.8), cdac0b017 (tqtc/lts-6.5)
    • 2025wk16s1QtforAndroid, 2025wk18s1QtforAndroid, 2025wk20s1QtforAndroid, 2025wk22s1-2QtforAndroid

      Registering custom scheme URLs using  QDesktopServices::setUrlHandler() no longer works on Android with Qt 6.8.3. Previous version Qt 6.8.2 did not show any issues.
      I've identified the commit https://codereview.qt-project.org/c/qt/qtbase/+/618970 as the cause for this problem.

      As far as my understanding goes, the issues stems from QAndroidPlatformServices::handleNewIntent() not being called, as it will only be instantiated from QDesktopServices::openUrl() when the services() method is called.

      Previously, QAndroidPlatformServices::handleNewIntent() would try to open the custom scheme URL via the QDesktopServices which called the custom handler registered with QDesktopServices::setUrlHandler().

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            janmoeller Jan Möller
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes